modificztion visuel page

--- a/linktree.css
+++ b/linktree.css
@@ -1,53 +1,84 @@
 * {
     margin: 0;
+    font-size: 16px;
 }
 
+body {
+    width: 100%;
+ }
+
 header {
+    width: 100%;
     background: linear-gradient(#1F2039,#8E86B5 );
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .entete {
     display: flex;
     flex-direction: column;
     color: white;
-    gap: 10px;
+}
+
+.entete > img {
+    display: flex;
+    align-items: center;
 }
 
 .photo_profil {
-    width: 100px;
+    width: 200px;
+    padding: 40px;
     display: flex;
-    align-items: center;
-    padding-left: 100px;
-    padding-top: 30px;
+
 }
 
-.entete > p {
-    padding-bottom: 30px;
+.text_entete {
+    display: flex;
+    flex-direction: column;
 }
 
-li {
-    list-style: none;
+.text_entete > h1{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 3rem;
 }
 
-.navigation {
+.text_entete > p {
+    width: 500px;
+    font-size: 2rem;
+}
+
+.navigation > ul {
     padding: 0;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
+h2 {
+    font-size: 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 20px;
+}
 .nav_coordo {
-    background-color: red;
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 30px;
+    margin: 30px;
 }
 
 .nav_coordo > p {
+    font-size: 2rem;
     display: flex;
     flex-direction: row;
     justify-content: center;    
@@ -56,7 +87,13 @@ li {
 .buton_nav {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-self: center;
+    background: linear-gradient(#8E86B5 , #ACAEED);
+    padding: 10px 20px;
+    margin: 10px;
+    border-radius: 50px;
+    color: white;
+    text-decoration: none;
 }
 
 .buton_nav:hover {
@@ -65,11 +102,11 @@ li {
 }
 
 .presentation {
-    background-color: blue;
+    width: 100%;
+    background: linear-gradient(#1F2039,#8E86B5 );
+    color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    padding: 50px;
 }
-
-
